cais_error_stacktrace
/tmp/tmpcje8twe0/main.c: In function ‘list_to_cuuint64_array’:
/tmp/tmpcje8twe0/main.c:354:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (Py_ssize_t i = 0; i < len; i++) {
   ^
/tmp/tmpcje8twe0/main.c:354:3: note: use option -std=c99 or -std=gnu99 to compile your code
/tmp/tmpcje8twe0/main.c: In function ‘list_to_cuuint32_array’:
/tmp/tmpcje8twe0/main.c:365:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (Py_ssize_t i = 0; i < len; i++) {
   ^
Traceback (most recent call last):
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/runpy.py", line 196, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/runpy.py", line 86, in _run_code
    exec(code, run_globals)
  File "/data/arnab_sen_sharma/Projects/relations/scripts/caching/cache_o1_approxes.py", line 165, in <module>
    main(
  File "/data/arnab_sen_sharma/Projects/relations/scripts/caching/cache_o1_approxes.py", line 37, in main
    relation = functional.filter_relation_samples(
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/torch/autograd/grad_mode.py", line 27, in decorate_context
    return func(*args, **kwargs)
  File "/data/arnab_sen_sharma/Projects/relations/src/functional.py", line 507, in filter_relation_samples
    predictions = predict_next_token(
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/torch/autograd/grad_mode.py", line 27, in decorate_context
    return func(*args, **kwargs)
  File "/data/arnab_sen_sharma/Projects/relations/src/functional.py", line 427, in predict_next_token
    batch_outputs = mt(
  File "/data/arnab_sen_sharma/Projects/relations/src/models.py", line 85, in __call__
    return self.model(*args, **kwargs)
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/torch/nn/modules/module.py", line 1194, in _call_impl
    return forward_call(*input, **kwargs)
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/mamba_ssm/models/mixer_seq_simple.py", line 233, in forward
    hidden_states = self.backbone(input_ids, inference_params=inference_params)
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/torch/nn/modules/module.py", line 1194, in _call_impl
    return forward_call(*input, **kwargs)
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/mamba_ssm/models/mixer_seq_simple.py", line 155, in forward
    hidden_states, residual = layer(
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/torch/nn/modules/module.py", line 1194, in _call_impl
    return forward_call(*input, **kwargs)
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/mamba_ssm/modules/mamba_simple.py", line 340, in forward
    hidden_states, residual = fused_add_norm_fn(
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/mamba_ssm/ops/triton/layernorm.py", line 478, in rms_norm_fn
    return LayerNormFn.apply(x, weight, bias, residual, eps, prenorm, residual_in_fp32, True)
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/mamba_ssm/ops/triton/layernorm.py", line 411, in forward
    y, mean, rstd, residual_out = _layer_norm_fwd(
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/mamba_ssm/ops/triton/layernorm.py", line 155, in _layer_norm_fwd
    _layer_norm_fwd_1pass_kernel[(M,)](
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/runtime/autotuner.py", line 143, in run
    timings = {config: self._bench(*args, config=config, **kwargs) for config in pruned_configs}
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/runtime/autotuner.py", line 143, in <dictcomp>
    timings = {config: self._bench(*args, config=config, **kwargs) for config in pruned_configs}
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/runtime/autotuner.py", line 122, in _bench
    return do_bench(kernel_call, warmup=self.warmup, rep=self.rep, quantiles=(0.5, 0.2, 0.8))
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/testing.py", line 102, in do_bench
    fn()
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/runtime/autotuner.py", line 110, in kernel_call
    self.fn.run(
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/runtime/jit.py", line 550, in run
    bin.c_wrapper(
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/compiler/compiler.py", line 692, in __getattribute__
    self._init_handles()
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/compiler/compiler.py", line 670, in _init_handles
    bin_path = {driver.HIP: "hsaco_path", driver.CUDA: "cubin"}[driver.backend]
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/runtime/driver.py", line 157, in __getattr__
    self._initialize_obj()
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/runtime/driver.py", line 154, in _initialize_obj
    self._obj = self._init_fn()
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/runtime/driver.py", line 187, in initialize_driver
    return CudaDriver()
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/runtime/driver.py", line 77, in __init__
    self.utils = CudaUtils()
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/runtime/driver.py", line 47, in __init__
    so = _build("cuda_utils", src_path, tmpdir)
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/common/build.py", line 106, in _build
    ret = subprocess.check_call(cc_cmd)
  File "/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/subprocess.py", line 369, in check_call
    raise CalledProcessError(retcode, cmd)
subprocess.CalledProcessError: Command '['/usr/bin/gcc', '/tmp/tmpcje8twe0/main.c', '-O3', '-I/data/arnab_sen_sharma/miniconda3/envs/fact/lib/python3.10/site-packages/triton/common/../third_party/cuda/include', '-I/data/arnab_sen_sharma/miniconda3/envs/fact/include/python3.10', '-I/tmp/tmpcje8twe0', '-shared', '-fPIC', '-lcuda', '-o', '/tmp/tmpcje8twe0/cuda_utils.cpython-310-x86_64-linux-gnu.so', '-L/lib64', '-L/lib64']' returned non-zero exit status 1.